--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         У школі я у 8 класі, також навчаюсь у музичній школі (7 клас).
         Цікавлюся спортом: футбол, волейбол.
         Люблю гуляти з друзями та подорожувати.
-        Почав вивчати програмування і веб-дизайн (20.12.2025)
+        Нещодавно почав вивчати програмування: веб-дизайн і Java Script (20.12.2025)
       </p>
     </div>
   </div>
@@ -166,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
