--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <li><a href="Банкомат.html" target="_blank">Банкомат</a></li>
       <li><a href="Шахівниця.html" target="_blank">Шахівниця</a></li>
       <li><a href="Перевірка віку.html" target="_blank">Перевірка віку</a></li>
-      <li><a href="Спроби вгадування.html" target="_blank">Спроби</a></li>
+      <li><a href="Анімація.html" target="_blank">Анімація</a></li>
       <li><a href="Пори року.html" target="_blank">Пори року</a></li>
       <li><a href="Сума трьох чисел.html" target="_blank">Сума чисел</a></li>
     </ul>
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
